Bug 337933 - Kmenuedit build failure with Qt 5.4 (QExplicitlySharedDataPointer)
Summary: Kmenuedit build failure with Qt 5.4 (QExplicitlySharedDataPointer)
Status: RESOLVED FIXED
Alias: None
Product: kmenuedit
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL: https://qt.gitorious.org/qt/qtbase/co...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-31 05:46 UTC by Hrvoje Senjan
Modified: 2014-08-01 16:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hrvoje Senjan 2014-07-31 05:46:28 UTC
error goes:

[  228s] In file included from /usr/include/qt5/QtCore/qsharedpointer.h:47:0,
[  228s]                  from /usr/include/qt5/QtGui/qpixmap.h:49,
[  228s]                  from /usr/include/qt5/QtGui/qbrush.h:53,
[  228s]                  from /usr/include/qt5/QtGui/qpalette.h:47,
[  228s]                  from /usr/include/qt5/QtWidgets/qwidget.h:49,
[  228s]                  from /usr/include/qt5/QtWidgets/qframe.h:45,
[  228s]                  from /usr/include/qt5/QtWidgets/qabstractscrollarea.h:45,
[  228s]                  from /usr/include/qt5/QtWidgets/qabstractitemview.h:45,
[  228s]                  from /usr/include/qt5/QtWidgets/qtreeview.h:45,
[  228s]                  from /usr/include/qt5/QtWidgets/qtreewidget.h:45,
[  228s]                  from /usr/include/qt5/QtWidgets/QTreeWidget:1,
[  228s]                  from /home/abuild/rpmbuild/BUILD/kmenuedit-5.0.40git~1405888234~80171ec/treeview.h:26,
[  228s]                  from /home/abuild/rpmbuild/BUILD/kmenuedit-5.0.40git~1405888234~80171ec/treeview.cpp:23:
[  228s] /usr/include/qt5/QtCore/qshareddata.h: In instantiation of 'QExplicitlySharedDataPointer<T>::QExplicitlySharedDataPointer(const QExplicitlySharedDataPointer<X>&) [with X = KSycocaEntry; T = KServiceGroup]':
[  228s] /home/abuild/rpmbuild/BUILD/kmenuedit-5.0.40git~1405888234~80171ec/treeview.cpp:376:67:   required from here
[  228s] /usr/include/qt5/QtCore/qshareddata.h:174:21: error: invalid conversion from 'KSycocaEntry*' to 'KServiceGroup*' [-fpermissive]
[  228s]          : d(o.data())
[  228s]                      ^
[  228s] /usr/include/qt5/QtCore/qshareddata.h: In instantiation of 'QExplicitlySharedDataPointer<T>::QExplicitlySharedDataPointer(const QExplicitlySharedDataPointer<X>&) [with X = KSycocaEntry; T = KService]':
[  228s] /home/abuild/rpmbuild/BUILD/kmenuedit-5.0.40git~1405888234~80171ec/treeview.cpp:381:62:   required from here
[  228s] /usr/include/qt5/QtCore/qshareddata.h:174:21: error: invalid conversion from 'KSycocaEntry*' to 'KService*' [-fpermissive]
[  228s] In file included from /home/abuild/rpmbuild/BUILD/kmenuedit-5.0.40git~1405888234~80171ec/kmenuedit.cpp:40:0:
[  228s] /home/abuild/rpmbuild/BUILD/kmenuedit-5.0.40git~1405888234~80171ec/basictab.h:54:63: warning: 'KShortcut' is deprecated (declared at /usr/include/KF5/KDELibs4Support/kshortcut.h:58) [-Wdeprecated-declarations]
[  228s]      void findServiceShortcut(const KShortcut&, KService::Ptr &);
[  228s]                                                                ^
[  229s] CMakeFiles/kdeinit_kmenuedit.dir/build.make:170: recipe for target 'CMakeFiles/kdeinit_kmenuedit.dir/treeview.cpp.o' failed
[  229s] make[2]: *** [CMakeFiles/kdeinit_kmenuedit.dir/treeview.cpp.o] Error 1


happens with master (and also very likely with 5.0.0)
Comment 1 Kevin Funk 2014-08-01 16:57:08 UTC
Git commit 0627f44ceb0172ab9d2dd37a6b96f54704d561df by Kevin Funk.
Committed on 01/08/2014 at 16:56.
Pushed by kfunk into branch 'master'.

Make compile with Qt 5.4

M  +4    -2    treeview.cpp

http://commits.kde.org/kmenuedit/0627f44ceb0172ab9d2dd37a6b96f54704d561df